// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/riw/app/translate 01 1`] = `
Object {
  "armd": Array [],
  "dups": Array [],
  "translation": Object {
    "locale": Object {},
    "todos": Array [],
  },
}
`;

exports[`lib/riw/app/translate 01 2`] = `
Array [
  "en-ne.json",
  "en-up.json",
  "en-us.json",
  "todo.json",
]
`;

exports[`lib/riw/app/translate 01 3`] = `
Array [
  Object {},
  Object {},
  Object {},
  Array [],
]
`;

exports[`lib/riw/app/translate 02 1`] = `
Object {
  "armd": Array [],
  "dups": Array [],
  "translation": Object {
    "locale": Object {},
    "todos": Array [],
  },
}
`;

exports[`lib/riw/app/translate 02 2`] = `
Array [
  "en-ne.json",
  "en-up.json",
  "en-us.json",
  "todo.json",
]
`;

exports[`lib/riw/app/translate 02 3`] = `
Array [
  Object {},
  Object {},
  Object {},
  Array [],
]
`;

exports[`lib/riw/app/translate 03 1`] = `
Object {
  "armd": Array [
    Object {
      "defaultMessage": "a.1!",
      "description": undefined,
      "file": "/fixtures/dir/a.js",
      "id": "a.1",
    },
    Object {
      "defaultMessage": "a.1 again!",
      "description": undefined,
      "file": "/fixtures/dir/aa.js",
      "id": "a.1",
    },
    Object {
      "defaultMessage": "b.1!",
      "description": undefined,
      "file": "/fixtures/dir/b.js",
      "id": "b.1",
    },
    Object {
      "defaultMessage": "b.2!",
      "description": "b.2 desc",
      "file": "/fixtures/dir/b.js",
      "id": "b.2",
    },
    Object {
      "defaultMessage": "b.2 again!",
      "description": "b.2 again desc",
      "file": "/fixtures/dir/bb.js",
      "id": "b.2",
    },
    Object {
      "defaultMessage": "c.1!",
      "description": undefined,
      "file": "/fixtures/dir/c.js",
      "id": "c.1",
    },
  ],
  "dups": Array [
    Object {
      "arfabs": Array [
        "/fixtures/dir/a.js",
        "/fixtures/dir/aa.js",
      ],
      "id": "a.1",
    },
    Object {
      "arfabs": Array [
        "/fixtures/dir/b.js",
        "/fixtures/dir/bb.js",
      ],
      "id": "b.2",
    },
  ],
  "translation": Object {
    "locale": Object {
      "en-ne": Object {
        "a.1": "!1.a",
        "b.1": "!1.b",
      },
      "en-up": Object {
        "a.1": "A.1!",
        "b.2": "B.2!",
      },
      "en-us": Object {
        "a.1": "a.1 again!",
        "b.1": "b.1!",
        "b.2": "b.2 again!",
        "c.1": "c.1!",
      },
    },
    "todos": Array [
      Object {
        "defaultMessage": "a.1 again!",
        "description": undefined,
        "file": "/fixtures/dir/aa.js",
        "id": "a.1",
        "locale": "en-up",
      },
      Object {
        "defaultMessage": "a.1 again!",
        "description": undefined,
        "file": "/fixtures/dir/aa.js",
        "id": "a.1",
        "locale": "en-ne",
      },
      Object {
        "defaultMessage": "b.1!",
        "description": undefined,
        "file": "/fixtures/dir/b.js",
        "id": "b.1",
        "locale": "en-up",
      },
      Object {
        "defaultMessage": "b.2!",
        "description": "b.2 desc",
        "file": "/fixtures/dir/b.js",
        "id": "b.2",
        "locale": "en-ne",
      },
      Object {
        "defaultMessage": "b.2 again!",
        "description": "b.2 again desc",
        "file": "/fixtures/dir/bb.js",
        "id": "b.2",
        "locale": "en-up",
      },
      Object {
        "defaultMessage": "b.2 again!",
        "description": "b.2 again desc",
        "file": "/fixtures/dir/bb.js",
        "id": "b.2",
        "locale": "en-ne",
      },
      Object {
        "defaultMessage": "c.1!",
        "description": undefined,
        "file": "/fixtures/dir/c.js",
        "id": "c.1",
        "locale": "en-up",
      },
      Object {
        "defaultMessage": "c.1!",
        "description": undefined,
        "file": "/fixtures/dir/c.js",
        "id": "c.1",
        "locale": "en-ne",
      },
    ],
  },
}
`;

exports[`lib/riw/app/translate 03 2`] = `
Array [
  "en-ne.json",
  "en-up.json",
  "en-us.json",
  "todo.json",
]
`;

exports[`lib/riw/app/translate 03 3`] = `
Array [
  Object {
    "a.1": "!1.a",
    "b.1": "!1.b",
  },
  Object {
    "a.1": "A.1!",
    "b.2": "B.2!",
  },
  Object {
    "a.1": "a.1 again!",
    "b.1": "b.1!",
    "b.2": "b.2 again!",
    "c.1": "c.1!",
  },
  Array [
    Object {
      "defaultMessage": "a.1 again!",
      "file": "/fixtures/dir/aa.js",
      "id": "a.1",
      "locale": "en-up",
    },
    Object {
      "defaultMessage": "a.1 again!",
      "file": "/fixtures/dir/aa.js",
      "id": "a.1",
      "locale": "en-ne",
    },
    Object {
      "defaultMessage": "b.1!",
      "file": "/fixtures/dir/b.js",
      "id": "b.1",
      "locale": "en-up",
    },
    Object {
      "defaultMessage": "b.2!",
      "description": "b.2 desc",
      "file": "/fixtures/dir/b.js",
      "id": "b.2",
      "locale": "en-ne",
    },
    Object {
      "defaultMessage": "b.2 again!",
      "description": "b.2 again desc",
      "file": "/fixtures/dir/bb.js",
      "id": "b.2",
      "locale": "en-up",
    },
    Object {
      "defaultMessage": "b.2 again!",
      "description": "b.2 again desc",
      "file": "/fixtures/dir/bb.js",
      "id": "b.2",
      "locale": "en-ne",
    },
    Object {
      "defaultMessage": "c.1!",
      "file": "/fixtures/dir/c.js",
      "id": "c.1",
      "locale": "en-up",
    },
    Object {
      "defaultMessage": "c.1!",
      "file": "/fixtures/dir/c.js",
      "id": "c.1",
      "locale": "en-ne",
    },
  ],
]
`;

exports[`lib/riw/app/translate 04 1`] = `
Object {
  "armd": Array [
    Object {
      "defaultMessage": "a.1!",
      "file": "/fixtures/dir/a.json",
      "id": "a.1",
    },
    Object {
      "defaultMessage": "a.1 again!",
      "file": "/fixtures/dir/aa.json",
      "id": "a.1",
    },
    Object {
      "defaultMessage": "b.1!",
      "file": "/fixtures/dir/b.json",
      "id": "b.1",
    },
    Object {
      "defaultMessage": "b.2!",
      "description": "b.2 desc",
      "file": "/fixtures/dir/b.json",
      "id": "b.2",
    },
    Object {
      "defaultMessage": "b.2 again!",
      "description": "b.2 again desc",
      "file": "/fixtures/dir/bb.json",
      "id": "b.2",
    },
    Object {
      "defaultMessage": "c.1!",
      "file": "/fixtures/dir/c.json",
      "id": "c.1",
    },
  ],
  "dups": Array [
    Object {
      "arfabs": Array [
        "/fixtures/dir/a.json",
        "/fixtures/dir/aa.json",
      ],
      "id": "a.1",
    },
    Object {
      "arfabs": Array [
        "/fixtures/dir/b.json",
        "/fixtures/dir/bb.json",
      ],
      "id": "b.2",
    },
  ],
  "translation": Object {
    "locale": Object {
      "en-ne": Object {
        "a.1": "!1.a",
        "b.1": "!1.b",
      },
      "en-up": Object {
        "a.1": "A.1!",
        "b.2": "B.2!",
      },
      "en-us": Object {
        "a.1": "a.1 again!",
        "b.1": "b.1!",
        "b.2": "b.2 again!",
        "c.1": "c.1!",
      },
    },
    "todos": Array [
      Object {
        "defaultMessage": "a.1 again!",
        "file": "/fixtures/dir/aa.json",
        "id": "a.1",
        "locale": "en-up",
      },
      Object {
        "defaultMessage": "a.1 again!",
        "file": "/fixtures/dir/aa.json",
        "id": "a.1",
        "locale": "en-ne",
      },
      Object {
        "defaultMessage": "b.1!",
        "file": "/fixtures/dir/b.json",
        "id": "b.1",
        "locale": "en-up",
      },
      Object {
        "defaultMessage": "b.2!",
        "description": "b.2 desc",
        "file": "/fixtures/dir/b.json",
        "id": "b.2",
        "locale": "en-ne",
      },
      Object {
        "defaultMessage": "b.2 again!",
        "description": "b.2 again desc",
        "file": "/fixtures/dir/bb.json",
        "id": "b.2",
        "locale": "en-up",
      },
      Object {
        "defaultMessage": "b.2 again!",
        "description": "b.2 again desc",
        "file": "/fixtures/dir/bb.json",
        "id": "b.2",
        "locale": "en-ne",
      },
      Object {
        "defaultMessage": "c.1!",
        "file": "/fixtures/dir/c.json",
        "id": "c.1",
        "locale": "en-up",
      },
      Object {
        "defaultMessage": "c.1!",
        "file": "/fixtures/dir/c.json",
        "id": "c.1",
        "locale": "en-ne",
      },
    ],
  },
}
`;

exports[`lib/riw/app/translate 04 2`] = `
Array [
  "en-ne.json",
  "en-up.json",
  "en-us.json",
  "todo.json",
]
`;

exports[`lib/riw/app/translate 04 3`] = `
Array [
  Object {
    "a.1": "!1.a",
    "b.1": "!1.b",
  },
  Object {
    "a.1": "A.1!",
    "b.2": "B.2!",
  },
  Object {
    "a.1": "a.1 again!",
    "b.1": "b.1!",
    "b.2": "b.2 again!",
    "c.1": "c.1!",
  },
  Array [
    Object {
      "defaultMessage": "a.1 again!",
      "file": "/fixtures/dir/aa.json",
      "id": "a.1",
      "locale": "en-up",
    },
    Object {
      "defaultMessage": "a.1 again!",
      "file": "/fixtures/dir/aa.json",
      "id": "a.1",
      "locale": "en-ne",
    },
    Object {
      "defaultMessage": "b.1!",
      "file": "/fixtures/dir/b.json",
      "id": "b.1",
      "locale": "en-up",
    },
    Object {
      "defaultMessage": "b.2!",
      "description": "b.2 desc",
      "file": "/fixtures/dir/b.json",
      "id": "b.2",
      "locale": "en-ne",
    },
    Object {
      "defaultMessage": "b.2 again!",
      "description": "b.2 again desc",
      "file": "/fixtures/dir/bb.json",
      "id": "b.2",
      "locale": "en-up",
    },
    Object {
      "defaultMessage": "b.2 again!",
      "description": "b.2 again desc",
      "file": "/fixtures/dir/bb.json",
      "id": "b.2",
      "locale": "en-ne",
    },
    Object {
      "defaultMessage": "c.1!",
      "file": "/fixtures/dir/c.json",
      "id": "c.1",
      "locale": "en-up",
    },
    Object {
      "defaultMessage": "c.1!",
      "file": "/fixtures/dir/c.json",
      "id": "c.1",
      "locale": "en-ne",
    },
  ],
]
`;
